ファイル名変更

--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <video autoplay muted loop src="./ループ.mp4" class="background_movie"></video>
+    <video autoplay muted loop src="./background.mp4" class="background_movie"></video>
     <img src="./desktop3.png" alt="" style="width: 100%;">
 </body>
 
