--- a/test.html
+++ b/test.html
@@ -13,13 +13,14 @@
         .background_movie {
             position: fixed;
             z-index: -999;
+            width: 100%;
         }
     </style>
 </head>
 
 <body>
-    <video autoplay muted loop src="./background.mp4" class="background_movie"></video>
-    <img src="./desktop3.png" alt="" style="width: 100%;">
+    <video autoplay muted loop src="./background2.mp4" class="background_movie"></video>
+    <img src="./desktop4.png" alt="" style="width: 100%;">
 </body>
 
 </html>
