背景画像比率変更

--- a/test2.html
+++ b/test2.html
@@ -8,12 +8,17 @@
     <style>
         body {
             margin: 0;
+            background-color: black;
         }
 
         .background_movie {
             position: fixed;
             z-index: -999;
             width: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            height: 100%;
         }
     </style>
 </head>
