コード書き進め　figmaDevModeを試してみる

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="menu">
         <div class="menu__links">
-            <div class="footer__menu">
+            <div class="menu__item">
                 <a href="#">観に行く</a>
                 <a href="#">借りる</a>
                 <a href="#">上演／展示する</a>
                 <a href="#">体現帝国館とは</a>
             </div>
-            <div class="menu">
+            <div class="menu__materials">
                 <a href="#">各種リンク</a>
-                <ul class="footer__pdfs">
+                <ul class="menu__pdfs">
                     <li><a href="#">各種図面</a></li>
                     <li><a href="#">設備資料</a></li>
                     <li><a href="#">ロゴ類</a></li>
@@ -35,9 +35,238 @@
     </div>
     <header>
         <a href="#"><img src="./images/taigenteikokukan_logo.png" alt="体現帝国館"></a>
+        <div class="header__links">
+            <div class="header__menu">
+                <a href="#">観に行く</a>
+                <a href="#">借りる</a>
+                <a href="#">上演／展示する</a>
+                <a href="#">体現帝国館とは</a>
+            </div>
+            <div class="menu">
+                <a href="#">各種リンク</a>
+                <ul class="footer__pdfs">
+                    <li><a href="#">各種図面</a></li>
+                    <li><a href="#">設備資料</a></li>
+                    <li><a href="#">ロゴ類</a></li>
+                    <li><a href="#">注意事項</a></li>
+                </ul>
+            </div>
+        </div>
         <p class="header__menu">MENU</p>
     </header>
-    <main></main>
+
+    <main>
+        <section class="firstview">
+            <h1><img src="./images/taigenteikokukan_logo.png" alt="体現帝国館"></h1>
+            <p>
+                舞台芸術を、内田橋から世界へ。<br>
+                24時間使える劇団［体現帝国］の専用劇場。<br>
+                地域と共に歩み、社会に必要とされる芸術を創造していきます。 
+            </p>
+        </section>
+        <section class="access">
+            <h2>観に行く</h2>
+            <div class="inner">
+                <div class="howto">
+                    <div class="howto2">
+                        <div class="far">
+                            <div class="place">
+                                <div class="div">新大阪駅</div>
+                            </div>
+                            <div class="place">
+                                <div class="div">東京駅</div>
+                            </div>
+                        </div>
+                        <div class="place3">
+                            <div class="div">名古屋駅</div>
+                        </div>
+                        <div class="place4">
+                            <div class="div">名鉄名古屋駅</div>
+                        </div>
+                        <div class="place5">
+                            <div class="div">金山駅</div>
+                        </div>
+                        <div class="place6">
+                            <div class="div">神宮前駅</div>
+                        </div>
+                        <div class="howfar">
+                            <div class="div7">
+                                <p class="p">電車(地下鉄名城線)で</p>
+                                <p class="p">6分</p>
+                            </div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="howfar2">
+                            <div class="div7">
+                                <p class="p">電車(名鉄)で</p>
+                                <p class="p">2分</p>
+                            </div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="place7">
+                            <div class="div">熱田神宮伝馬町駅</div>
+                        </div>
+                        <div class="place8">
+                            <div class="div">豊田本町駅</div>
+                        </div>
+                        <div class="place9">
+                            <div class="div">内田橋バス停</div>
+                        </div>
+                        <div class="place10">
+                            <div class="div">体現帝国館</div>
+                        </div>
+                        <div class="howfar3">
+                            <div class="div7">
+                                <p class="p">3番出口より</p>
+                                <p class="p">徒歩10分</p>
+                            </div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="howfar4">
+                            <div class="div7">
+                                <p class="p">電車(JR)で</p>
+                                <p class="p">3~5分</p>
+                            </div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="howfar5">
+                            <div class="div7">
+                                <p class="p">電車(名鉄)で</p>
+                                <p class="p">6分</p>
+                            </div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="howfar6">
+                            <div class="div7">
+                                <p class="p">改札より</p>
+                                <p class="p">徒歩5分</p>
+                            </div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="howfar7">
+                            <div class="div7">徒歩3分</div>
+                            <img class="howfar-child" alt="">
+                        </div>
+                        <div class="howfar-parent">
+                            <div class="howfar8">
+                                <div class="div7">
+                                    <p class="p">新幹線で</p>
+                                    <p class="p">50分</p>
+                                </div>
+                                <img class="howfar-child" alt="">
+                            </div>
+                            <div class="howfar8">
+                                <div class="div7">
+                                    <p class="p">新幹線で</p>
+                                    <p class="p">1時間40分</p>
+                                </div>
+                                <img class="howfar-child" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="map">
+                    <div class="address">
+                        <div class="div20">
+                            <p class="p">〒457-0862</p>
+                            <p class="p">愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階</p>
+                        </div>
+                        <div class="button">
+                            <div class="google-map-wrapper">
+                                <div class="google-map">Google Mapで開く</div>
+                            </div>
+                            <img class="button-child" alt="">
+                        </div>
+                    </div>
+                    <div class="howfar10">
+                        <div class="div21">近辺からお越しの方</div>
+                        <div class="div22">
+                            <p class="p">地下鉄名城線［熱田神宮伝馬町駅］③番出口より徒歩10分</p>
+                            <p class="p">名鉄［豊田本町駅］改札より徒歩5分</p>
+                            <p class="p">市バス［内田橋バス停］より徒歩3分</p>
+                        </div>
+                    </div>
+                    <div class="howfar10">
+                        <div class="div21">遠方からお越しの方</div>
+                        <div class="div22">
+                            <p class="p">東京［東京駅］より約2時間</p>
+                            <p class="p">大阪［大阪駅］より約1時間40分</p>
+                        </div>
+                    </div>
+                    <div class="howfar10">
+                        <div class="div21">お車でお越しの方</div>
+                        <div class="div22">建物の隣にコインパーキング有</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>借りる</h2>
+            <div class="inner">
+                <p class="div">体現帝国館は24時間ご利用いただけます。</p>
+                <div class="parent">
+                    <div class="div2">利用条件 </div>
+                    <div class="m-9m-container">
+                        <p class="p">-使用時間の前後15分は入退室が可能です。 </p>
+                        <p class="p">-広さ：幅5m × 奥行9m × 高さ4.4m </p>
+                        <p class="p">-想定用途：演劇練習／ダンス練習／音楽練習／写真撮影／美術製作 など </p>
+                    </div>
+                </div>
+                <div class="parent">
+                    <div class="div2">利用料金 </div>
+                    <div class="table">
+                        <div class="sell">
+                            <div class="div">1時間</div>
+                        </div>
+                        <div class="sell2">
+                            <div class="div">1,000円</div>
+                        </div>
+                        <div class="sell3">
+                            <div class="div">6時間</div>
+                        </div>
+                        <div class="sell4">
+                            <div class="div">5,000円</div>
+                        </div>
+                        <div class="sell5">
+                            <div class="div">12時間</div>
+                        </div>
+                        <div class="sell6">
+                            <div class="div">10,000円</div>
+                        </div>
+                        <div class="sell7">
+                            <div class="div">18時間</div>
+                        </div>
+                        <div class="sell8">
+                            <div class="div">15,000円</div>
+                        </div>
+                        <div class="sell9">
+                            <div class="div">24時間</div>
+                        </div>
+                        <div class="sell10">
+                            <div class="div">20,000円</div>
+                        </div>
+                        <div class="sell11">
+                            <div class="div">機材使用料</div>
+                        </div>
+                        <div class="sell12">
+                            <div class="div">別途5,000円</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="div16">お申し込み  </div>
+                    <div class="div">利用を希望される方は、下記フォームまでご連絡ください。 </div>
+                    <div class="button">
+                        <div class="google-map-wrapper">
+                            <div class="div">レンタルを申し込む</div>
+                        </div>
+                        <img class="button-child" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <footer class="footer">
         <div class="inner">
             <div class="footer__links">
