--- a/taigenteikoku/src/index.html
+++ b/taigenteikoku/src/index.html
@@ -11,10 +11,12 @@
         }
     </style>
     <title>体現帝国館</title>
+    <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
 </head>
 
 <body
-    class="w-screen relative inline-flex flex-col justify-start items-center font-zen-old-mincho font-medium text-gray-950">
+    class="w-full relative inline-flex flex-col justify-start items-center font-zen-old-mincho font-medium text-gray-950">
 
     <div id="introOverlay"
         class="fixed inset-0 z-[200] flex flex-col justify-center items-center bg-white opacity-100 transition-opacity duration-[1200ms] hidden">
@@ -96,19 +98,19 @@
         <div class="w-full flex flex-col md:flex-row justify-between items-start gap-24 md:gap-10">
             <div class="flex flex-col items-center md:items-start gap-2
                 w-full md:min-w-[350px] max-w-[360px] mx-auto">
-                <img src="./image/far_1.svg" alt="">
-                <img src="./image/far_2.svg" alt="">
-                <img src="./image/far_3.svg" alt="">
-                <img src="./image/far_4.svg" alt="">
-                <img src="./image/far_5.svg" alt="">
-                <img src="./image/far_6.svg" alt="">
-                <img src="./image/far_7.svg" alt="">
-                <img src="./image/far_8.svg" alt="">
-                <img src="./image/far_9.svg" alt="">
+                <img src="./image/far_1.svg" alt="" class="fade-left">
+                <img src="./image/far_2.svg" alt="" class="fade-left">
+                <img src="./image/far_3.svg" alt="" class="fade-left">
+                <img src="./image/far_4.svg" alt="" class="fade-left">
+                <img src="./image/far_5.svg" alt="" class="fade-left">
+                <img src="./image/far_6.svg" alt="" class="fade-left">
+                <img src="./image/far_7.svg" alt="" class="fade-left">
+                <img src="./image/far_8.svg" alt="" class="fade-left">
+                <img src="./image/far_9.svg" alt="" class="fade-left">
             </div>
 
             <div class="w-full md:w-1/2 flex flex-col gap-16">
-                <div class="flex flex-col gap-3.5">
+                <div class="flex flex-col gap-3.5 fade-right">
                     <p class="leading-8 tracking-widest">
                         〒457-0862<br>愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階
                     </p>
@@ -123,7 +125,7 @@
                     </div>
                 </div>
 
-                <section class="flex flex-col gap-3.5">
+                <section class="flex flex-col gap-3.5 fade-right">
                     <h3 class="text-xl font-bold tracking-widest">近辺からお越しの方</h3>
                     <p class="leading-8 tracking-widest">
                         地下鉄名城線［熱田神宮伝馬町駅］③番出口より徒歩10分<br>
@@ -132,7 +134,7 @@
                     </p>
                 </section>
 
-                <section class="flex flex-col gap-3.5">
+                <section class="flex flex-col gap-3.5 fade-right">
                     <h3 class="text-xl font-bold tracking-widest">遠方からお越しの方</h3>
                     <p class="leading-8 tracking-widest">
                         東京［東京駅］より約2時間<br>
@@ -140,7 +142,7 @@
                     </p>
                 </section>
 
-                <section class="flex flex-col gap-3.5">
+                <section class="flex flex-col gap-3.5 fade-right">
                     <h3 class="text-xl font-bold tracking-widest">お車でお越しの方</h3>
                     <p class="leading-8 tracking-widest">建物の隣にコインパーキング有</p>
                 </section>
@@ -157,9 +159,9 @@
             <img src="./image/rent.svg" alt="借りる">
         </h2>
         <div class="flex flex-col justify-start items-center gap-16">
-            <p class="text-center justify-start leading-8 tracking-widest">
+            <p class="text-center justify-start leading-8 tracking-widest fade-left">
                 体現帝国館は24時間ご利用いただけます。</p>
-            <section class="flex flex-col justify-start items-center gap-7">
+            <section class="flex flex-col justify-start items-center gap-7 fade-left">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
                 <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
@@ -168,7 +170,7 @@
                     <li>想定用途：演劇練習／ダンス練習／音楽練習／写真撮影／美術製作 など</li>
                 </ul>
             </section>
-            <div class="flex flex-col justify-start items-center gap-7 w-full">
+            <div class="flex flex-col justify-start items-center gap-7 w-full fade-left">
                 <div class="text-center justify-start text-xl font-bold tracking-widest">
                     利用料金 </div>
                 <table class="border-separate border-spacing-y-0 w-4/5">
@@ -216,7 +218,7 @@
                     </tbody>
                 </table>
             </div>
-            <section class="flex flex-col justify-start items-center gap-7">
+            <section class="flex flex-col justify-start items-center gap-7 fade-left">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     お申し込み</h3>
                 <p class="justify-start leading-8 tracking-widest">
@@ -243,13 +245,13 @@
             <img src="./image/use.svg" alt="上演/展示する">
         </h2>
         <div class="w-full max-w-[800px] flex flex-col justify-start gap-14">
-            <p class="self-stretch justify-start leading-8 tracking-widest">
+            <p class="self-stretch justify-start leading-8 tracking-widest fade-right">
                 体現帝国館は貸館営業を行っておりません。
                 <br />御利用を希望の場合は、申し込みフォームより応募いただき審査を通過した方のみ体現帝国との共催事業として利用いただけます。
                 <br />舞台上演に限らず、音楽イベントやワークショップ、展示等での御利用も可能です。
                 <br />度肝を抜く企画を持ち込みください。
             </p>
-            <div class="flex flex-col justify-start items-center gap-7">
+            <div class="flex flex-col justify-start items-center gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     利用条件</h3>
                 <dl class="w-full flex flex-col gap-6 leading-8 tracking-widest">
@@ -278,7 +280,7 @@
                     </div>
                 </dl>
             </div>
-            <section class="w-[694px] flex flex-col justify-start items-start gap-7">
+            <section class="w-[694px] flex flex-col justify-start items-start gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     上演を検討する県外の方々へ</h3>
                 <dl class="flex flex-col justify-start items-center gap-2.5">
@@ -291,7 +293,7 @@
                     </dd>
                 </dl>
             </section>
-            <section class="w-[694px] flex flex-col justify-start items-start gap-7">
+            <section class="w-[694px] flex flex-col justify-start items-start gap-7 fade-right">
                 <h3 class="text-center justify-start text-xl font-bold tracking-widest">
                     観客の皆さんへ</h3>
                 <p class="justify-start leading-8 tracking-widest">
@@ -299,7 +301,7 @@
                     <br />-愛知県では観られない作品を提供します。
                 </p>
             </section>
-            <div class="flex flex-col justify-start items-center gap-7">
+            <div class="flex flex-col justify-start items-center gap-7 fade-right">
                 <div class="text-center justify-start text-xl font-bold tracking-widest">
                     お申し込み </div>
                 <div class="justify-start leading-8 tracking-widest">
@@ -326,9 +328,9 @@
             <img src="./image/about.svg" alt="体現帝国館とは">
         </h2>
         <div class="w-full flex flex-col justify-start items-center gap-2.5">
-            <div class="self-stretch text-justify justify-start leading-8 tracking-widest">
+            <p class="self-stretch text-justify justify-start leading-8 tracking-widest fade-left">
                 名古屋市南区内田橋にある電気工務店の旧倉庫を2024年1月より劇団［体現帝国］が借り、＜稽古・作業・上演・打ち上げ＞演劇に関する全てが完結する専用劇場として改装を施す。2025年4月にこけら落とし公演を行い、以降は劇団の活動を最優先としながら内田橋商店街と連携し劇場運営を行う。 
-            </div>
+            </p>
         </div>
         <div class="w-full flex flex-col justify-center items-center">
             <div id="msgCard"
@@ -365,67 +367,68 @@
         </ul>
     </section>
 
-    <div class="w-full h-80 pointer-events-none bg-[url(./image/footer.webp)] bg-repeat-x bg-contain bg-bottom -mb-1">
-    </div>
-    <footer class="w-full pt-20 pb-14 bg-gray-950 flex flex-col items-center gap-14 overflow-hidden">
-        <div class="md:w-4/5 w-9/10 flex flex-col md:flex-row justify-between items-start gap-12 max-w-[1200px]">
-            <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
-                <ul class="list-none text-xl leading-8">
-                    <a href="#watch">
-                        <li class="underline mb-2.5">観に行く</li>
-                    </a>
-                    <a href="#rent">
-                        <li class="underline mb-2.5">借りる</li>
-                    </a>
-                    <a href="#use">
-                        <li class="underline mb-2.5">上演／展示する</li>
-                    </a>
-                    <a href="#about">
-                        <li class="underline mb-2.5">体現帝国館とは</li>
-                    </a>
-                </ul>
-            </div>
-
-            <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
-                <h4 class="underline text-xl">各種資料</h4>
-                <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
-                    <li>各種図面</li>
-                    <li>設備資料</li>
-                    <li>ロゴ類</li>
-                    <li>利用規約</li>
-                </ul>
-            </div>
-
-            <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
-                <img class="w-40 h-auto" src="./image/taigenteikokukan_logo.png" alt="体現帝国館" />
-                <p>代表　渡部剛己</p>
-                <p>Mail : taigenteikoku@gmail.com</p>
-                <p>Tel : 080-6944-6915</p>
-                <p>〒457-0862<br>愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階</p>
-
-                <div class="inline-flex items-center gap-4 mt-2">
-                    <a href="https://x.com/taigenteikoku" target="_blank">
-                        <img class="w-6" src="./image/logo.svg" />
-                    </a>
-                    <a href="https://www.instagram.com/taigenteikoku/" target="_blank">
-                        <img class="w-6" src="./image/Instagram_Glyph_White.svg" />
-                    </a>
-                    <a href="https://www.facebook.com/taigenteikoku/" target="_blank">
-                        <img class="w-6" src="./image/Facebook_Logo_Secondary.png" />
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCrYWJTqdJ6MsD54DqECi3sA" target="_blank">
-                        <img class="w-6" src="./image/yt_icon_mono_dark.png" />
-                    </a>
+    <div class="w-full fade-up">
+        <div
+            class="w-full h-80 pointer-events-none bg-[url(./image/footer.webp)] bg-repeat-x bg-contain bg-bottom -mb-1">
+        </div>
+        <footer class="w-full pt-20 pb-14 bg-gray-950 flex flex-col items-center gap-14 overflow-hidden">
+            <div class="md:w-4/5 w-9/10 flex flex-col md:flex-row justify-between items-start gap-12 max-w-[1200px]">
+                <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
+                    <ul class="list-none text-xl leading-8">
+                        <a href="#watch">
+                            <li class="underline mb-2.5">観に行く</li>
+                        </a>
+                        <a href="#rent">
+                            <li class="underline mb-2.5">借りる</li>
+                        </a>
+                        <a href="#use">
+                            <li class="underline mb-2.5">上演／展示する</li>
+                        </a>
+                        <a href="#about">
+                            <li class="underline mb-2.5">体現帝国館とは</li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
+                    <h4 class="underline text-xl">各種資料</h4>
+                    <ul class='pl-6 leading-8 tracking-widest list-["-"]'>
+                        <li>各種図面</li>
+                        <li>設備資料</li>
+                        <li>ロゴ類</li>
+                        <li>利用規約</li>
+                    </ul>
+                </div>
+                <div class="flex flex-col gap-3 text-gray-100 tracking-widest w-full md:w-auto">
+                    <img class="w-40 h-auto" src="./image/taigenteikokukan_logo.png" alt="体現帝国館" />
+                    <p>代表　渡部剛己</p>
+                    <p>Mail : taigenteikoku@gmail.com</p>
+                    <p>Tel : 080-6944-6915</p>
+                    <p>〒457-0862<br>愛知県名古屋市南区内田橋1丁目6-10 豊栄ビル 1階</p>
+                    <div class="inline-flex items-center gap-4 mt-2">
+                        <a href="https://x.com/taigenteikoku" target="_blank">
+                            <img class="w-6" src="./image/logo.svg" />
+                        </a>
+                        <a href="https://www.instagram.com/taigenteikoku/" target="_blank">
+                            <img class="w-6" src="./image/Instagram_Glyph_White.svg" />
+                        </a>
+                        <a href="https://www.facebook.com/taigenteikoku/" target="_blank">
+                            <img class="w-6" src="./image/Facebook_Logo_Secondary.png" />
+                        </a>
+                        <a href="https://www.youtube.com/channel/UCrYWJTqdJ6MsD54DqECi3sA" target="_blank">
+                            <img class="w-6" src="./image/yt_icon_mono_dark.png" />
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="justify-start text-gray-100 leading-8 tracking-widest">
-            ©体現帝国</div>
-    </footer>
+            <div class="justify-start text-gray-100 leading-8 tracking-widest">
+                ©体現帝国</div>
+        </footer>
+    </div>
+
     <script>
         // ---- Animation Config (editable) ----
         const INTRO_BACK_SHOW_DELAY = 1500;     // 背景画像が表示されるまで
-        const INTRO_TEXT_SHOW_DELAY = 5000;     // intro テキスト表示
+        const INTRO_TEXT_SHOW_DELAY = 3500;     // intro テキスト表示
         const SLIDESHOW_START_DELAY = INTRO_TEXT_SHOW_DELAY;     // スライドショー開始
         const SLIDESHOW_INTERVAL = 8000;        // スライド切替間隔
         const introOverlay = document.getElementById("introOverlay");
@@ -490,8 +493,8 @@
         setTimeout(() => {
             setInterval(changeSlide, SLIDESHOW_INTERVAL);
         }, SLIDESHOW_START_DELAY);
-
     </script>
+
     <!-- メッセージカードトグル -->
     <script>
         const msgToggle = document.getElementById("msgToggle");
@@ -561,6 +564,7 @@
             }
         });
     </script>
+
     <!-- ハンバーガーメニュー -->
     <script>
         const btn = document.getElementById("menuBtn");
@@ -618,6 +622,56 @@
                 line2.style.opacity = "1";
                 line3.style.transform = "translateY(0) rotate(0deg)";
             }
+        });
+    </script>
+
+    <!-- GSAP -->
+    <script>
+        gsap.registerPlugin(ScrollTrigger);
+
+        const fadeSettings = {
+            duration: 1.2,
+            ease: "power2.out",
+            opacity: 0
+        };
+
+        // 左から
+        gsap.utils.toArray(".fade-left").forEach(el => {
+            gsap.from(el, {
+                ...fadeSettings,
+                x: -60,
+                scrollTrigger: {
+                    trigger: el,
+                    start: "top 80%",
+                    toggleActions: "play none none none"
+                }
+            });
+        });
+
+        // 右から
+        gsap.utils.toArray(".fade-right").forEach(el => {
+            gsap.from(el, {
+                ...fadeSettings,
+                x: 60,
+                scrollTrigger: {
+                    trigger: el,
+                    start: "top 80%",
+                    toggleActions: "play none none none"
+                }
+            });
+        });
+
+        // 下から（補助）
+        gsap.utils.toArray(".fade-up").forEach(el => {
+            gsap.from(el, {
+                ...fadeSettings,
+                y: 40,
+                scrollTrigger: {
+                    trigger: el,
+                    start: "top 85%",
+                    toggleActions: "play none none none"
+                }
+            });
         });
     </script>
 </body>
